Clase 5 - primeros pasos en css

--- a/Clase 4/index.html
+++ b/Clase 4/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Nuestro titulo de la pestaña</title>
-        <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="./styles/styles.css">
     </head>
     <body> 
         <header> <!--Encabezado-->
             <div> <!--Contenedor-->
                 <h2>LOGO</h2> 
-                <h1>Juguetería</h1> <!--Titulo-->
+                <h1 class="tituloPrincipal">Juguetería</h1> <!--Titulo-->
             </div>
             <nav> <!--Barra de navegación-->
                 <ul>
@@ -37,13 +37,38 @@
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit temporibus omnis qui, blanditiis dolore quo ipsum optio ipsam tempora sequi impedit mollitia aperiam accusantium eos amet voluptatem aut. Quisquam, quas.
                     </p>
+                    <form >
+                        <label for="">Nombre</label>
+                        <input type="text">
+                        <label for="">Nombre</label>
+                        <input type="text">
+                        <label for="">Nombre</label>
+                        <input type="text">
+                    </form>
                 </div>
             </section>
             <section>
                 <h2>Mas vendidos</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit temporibus omnis qui, blanditiis dolore quo ipsum optio ipsam tempora sequi impedit mollitia aperiam accusantium eos amet voluptatem aut. Quisquam, quas.
+                </p>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit temporibus omnis qui, blanditiis dolore quo ipsum optio ipsam tempora sequi impedit mollitia aperiam accusantium eos amet voluptatem aut. Quisquam, quas.
+                </p>
             </section>
             <section>
                 <h2>Comentarios</h2>
+                <form >
+                    <label for="">Nombre</label>
+                    <input type="text">
+                    <label for="">Nombre</label>
+                    <input type="text">
+                    <label for="">Nombre</label>
+                    <input type="text">
+                </form>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit temporibus omnis qui, blanditiis dolore quo ipsum optio ipsam tempora sequi impedit mollitia aperiam accusantium eos amet voluptatem aut. Quisquam, quas.
+                </p>
             </section>
         </main> <!--Contenido principal-->
         <footer></footer> <!--Pie de página-->
