--- a/Clase 6/index.html
+++ b/Clase 6/index.html
@@ -2,59 +2,48 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Página de practica</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página de Práctica</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header class="contenedor-header">
-        <div>
-            <h1 class="titulo-principal">Titulo principal</h1>
-            <h2>LOGO</h2>
+        <div class="header-logo">
+            <h1 class="titulo-principal">Título Principal</h1>
+            <h2 class="logo">LOGO</h2>
         </div>
-        <div>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="./index.html">Inicio</a>
-                    </li>
-                    <li>
-                        <a href="./pages/about.html">Nosotros</a>
-                    </li>
-                    <li>
-                        <a href="./pages/contact.html">Contacto</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="header-nav">
+            <ul class="nav-list">
+                <li><a href="./index.html" class="nav-link">Inicio</a></li>
+                <li><a href="./pages/about.html" class="nav-link">Nosotros</a></li>
+                <li><a href="./pages/contact.html" class="nav-link">Contacto</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <section>
+    <main class="main-content">
+        <section class="intro-section">
             <div class="div-hola">
-                <p class="texto">HOLA</p>
+                <p class="texto">¡Hola!</p>
             </div>
             <div class="div-chau">
-                <p class="texto">CHAU</p>
+                <p class="texto">¡Chau!</p>
             </div>
         </section>
-        <section>
-            <div>
-                <img src="../Clase 1/image.webp" alt="" class="imagen">
+        <section class="image-text-section">
+            <div class="image-container">
+                <img src="../Clase 1/image.webp" alt="Imagen descriptiva" class="imagen">
             </div>
-            <div>
-                <h5>
-                    Titulo H5
-                </h5>
-                <h3>
-                    Titulo H3
-                </h3>
+            <div class="text-container">
+                <h5 class="subtitle">Título H5</h5>
+                <h3 class="title">Título H3</h3>
             </div>
         </section>
-        <section>
-
+        <section class="additional-section">
+            <!-- Agrega contenido aquí si es necesario -->
         </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <p>&copy; 2024 Tu Empresa. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
