--- a/Clase 6/pages/contact.html
+++ b/Clase 6/pages/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Página de práctica</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <header class="contenedor-header">
