:tada: Add: new styles

--- a/páginaDeEjemplo/index.html
+++ b/páginaDeEjemplo/index.html
@@ -71,65 +71,84 @@
             </div>
         </div>
     </section>
+    <!--Video sobre la salud mental-->
+  <!-- Sección de Importancia de la Salud Mental -->
+    <section id="importancia" class="importance-section">
+        <div class="importance-content">
+            <div class="importance-text">
+                <h2>La Importancia de la Salud Mental</h2>
+                <p>
+                    La salud mental es crucial para el bienestar general y la calidad de vida. Abarca nuestro estado emocional, psicológico y social, afectando cómo pensamos, sentimos y actuamos. Mantener una buena salud mental nos ayuda a manejar el estrés, relacionarnos con los demás de manera saludable y tomar decisiones acertadas. Es fundamental buscar apoyo y desarrollar estrategias para cuidar de nuestra salud mental y emocional.
+                </p>
+            </div>
+            <div class="importance-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/-NKdoUPk8Dk?si=7-FgsLLw-3kH4nAu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
 
-    <!-- Sección de servicios -->
-    <section id="servicios">
-        <div>
-            <h2>Nuestros Servicios</h2>
-            <div>
-                <img src="" alt="">
+    <!-- Sección de Servicios -->
+    <section id="servicios" class="services-section">
+        <div class="services-container">
+            <div class="service-item">
+                <img src="./asset/image/asesoramiento.jpg" alt="Asesoramiento Psicológico" class="service-image">
                 <h3>Asesoramiento Psicológico</h3>
                 <p>Sesiones de terapia individual y grupal para tratar diversos aspectos de la salud mental.</p>
             </div>
-            <div>
+            <div class="service-item">
+                <img src="./asset/image/talleres.jpg" alt="Talleres y Cursos" class="service-image">
                 <h3>Talleres y Cursos</h3>
                 <p>Programas educativos sobre manejo del estrés, desarrollo personal y más.</p>
-                <img src="" alt="">
             </div>
-            <div>
-                <img src="" alt="">
+            <div class="service-item">
+                <img src="./asset/image/recursos.jpg" alt="Recursos en Línea" class="service-image">
                 <h3>Recursos en Línea</h3>
                 <p>Acceso a guías, artículos y herramientas para el autocuidado y la salud mental.</p>
             </div>
         </div>
-        <div>
-            <h2>Conoce a Nuestro Equipo</h2>
-            <div>
-                <img src="ruta-a-imagen1.jpg" alt="Nombre del Profesional 1" style="width:150px;height:150px;">
-                <h3>Dr. Ana Pérez</h3>
-                <p>Psicóloga Clínica</p>
-            </div>
-            <div>
-                <img src="ruta-a-imagen2.jpg" alt="Nombre del Profesional 2" style="width:150px;height:150px;">
-                <h3>Lic. Luis Gómez</h3>
-                <p>Terapeuta Ocupacional</p>
-            </div>
-            <div>
-                <img src="ruta-a-imagen3.jpg" alt="Nombre del Profesional 3" style="width:150px;height:150px;">
-                <h3>Dra. María Fernández</h3>
-                <p>Psicóloga Educacional</p>
+        <div class="team-section">
+            <h2 class="title-team">Conoce a Nuestro Equipo</h2>
+            <div class="content-team">
+                <div class="team-member">
+                    <img src="./asset/image/Psicologa-Sanitaria.webp" alt="Dr. Ana Pérez" class="team-image">
+                    <h3>Dr. Ana Pérez</h3>
+                    <p>Psicóloga Clínica</p>
+                </div>
+                <div class="team-member">
+                    <img src="./asset/image/psico-h.jpg" alt="Lic. Luis Gómez" class="team-image">
+                    <h3>Lic. Luis Gómez</h3>
+                    <p>Terapeuta Ocupacional</p>
+                </div>
+                <div class="team-member">
+                    <img src="./asset/image/ocupa.jpg" alt="Dra. María Fernández" class="team-image">
+                    <h3>Dra. María Fernández</h3>
+                    <p>Psicóloga Educacional</p>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Sección de contacto -->
-    <section id="contacto">
-        <div>
+    <section id="contacto" class="contact-section">
+        <div class="contact-info">
             <h2>Contacto</h2>
             <p>Si tienes alguna pregunta, no dudes en contactarnos.</p>
             <p>correoelectronico@gmail.com</p>
             <p>+54 9 1123232324</p>
+            <div class="maps-form">
+                <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13104.872996998482!2d-58.29185515299745!3d-34.800450632293995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a329df64c1bf55%3A0x7a8130d06778f0a!2sPsic%C3%B3loga%20-%20Lic.%20Ver%C3%B3nica%20Caballero!5e0!3m2!1ses!2sar!4v1726163326251!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
         <form class="formulario">
-            <div>
+            <div class="form-group">
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" required>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="mensaje">Mensaje:</label>
                 <textarea id="mensaje" name="mensaje" required></textarea>
             </div>
@@ -138,9 +157,9 @@
     </section>
 
     <!-- Pie de página -->
-    <footer>
+    <footer class="footer">
         <p>&copy; 2024 Salud Mental. Todos los derechos reservados.</p>
-        <p><a href="#">Política de privacidad</a> | <a href="#">Términos de servicio</a></p>
+        <p><a href="#" class="footer-link">Política de privacidad</a> | <a href="#" class="footer-link">Términos de servicio</a></p>
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
